# APEX-OS

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/api/: Dockerfile  mcp_stdio.py  pyproject.toml
apps/api/app/: init_db.py  main.py
apps/api/app/core/: db.py  settings.py
apps/api/app/mcp/: proposals.py  registry.py  sentry.py  transport_http.py
apps/api/app/mcp/tools/: __init__.py  accounts.py  drafts.py  events.py  paperclip.py  proposals.py  session.py
apps/api/app/models/: actions.py  audit.py  events.py  ingestion.py  paperclip.py  paperclip_tasks.py  properties.py  proposals.py  session.py
apps/api/app/repositories/: actions.py  events.py  ingestion.py  linkage.py  properties.py  proposals.py
apps/api/app/services/: actions.py  audit.py  bootstrap.py  classification.py  feed.py  ingestion.py  linkage.py  paperclip.py  paperclip_tasks.py  session.py  sources.py
apps/api/app/workers/: README.md
apps/api/db/schema/: accounts_workspace_migration.sql  mcp_proposed_actions_migration.sql  phase1_schema.sql
apps/api/db/seeds/: brands.sql
apps/api/tests/: test_events.py  test_mcp_http_routes.py  test_mcp_registry.py  test_mcp_sentry.py  test_mcp_stdio_smoke.py  test_mcp_tools_lifecycle.py  test_mcp_tools_read.py  test_mcp_tools_write_drafts.py  test_mcp_tools_write_paperclip.py  test_properties.py  test_proposals_repo.py  test_proposals_service.py
scripts/: beta-validation.sh  healthcheck.sh  start-api-dev.sh  start-preview-tunnel.sh  start-web-dev.mjs
(+51 files in other folders)
